--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     //Room
     implementation  'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-    compile 'android.arch.persistence.room:rxjava2:1.0.0'
+    implementation 'android.arch.persistence.room:rxjava2:1.0.0'
     //UI element
     implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
